# Comet

./: .gitignore  Cargo.toml  README.md  x86_64-bootloader.json  x86_64-comet-os.json
docs/: ARCHITECTURE.md
src/: MODULES.md  allocator.rs  demo.rs  input.rs  main.rs  panic_handler.rs
src/arch/x86_64/: gdt.rs  interrupts.rs  mod.rs
src/arch/x86_64/bootloader/: bios.rs  mod.rs  uefi.rs
src/fs/: inode.rs  mod.rs  vfs.rs
src/fusion/: mod.rs
src/gui/: mod.rs  widget.rs  window.rs
src/kernel_a/: arch_impl.rs  mm_impl.rs  mod.rs
src/kernel_b/: fs_impl.rs  gui_impl.rs  mod.rs
src/mm/: allocator.rs  mod.rs  paging.rs
src/shell/: commands.rs  mod.rs  parser.rs
src/system/: mod.rs
src/vga/: color.rs  mod.rs  writer.rs
