[package]
name = "comet"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.4"
spinning_top = "0.3"
x86_64 = "0.15"
uart_16550 = "0.3"

[target.'cfg(target_os = "none")'.dependencies]
core = { version = "1.0", optional = true }

[target.'cfg(target_os = "none")'.build-dependencies]

[target.'cfg(target_os = "none")']  
rustflags = [
    "-C", "link-arg=-nostartfiles",
    "-C", "relocation-model=pic",
    "-C", "link-arg=-z",
    "-C", "link-arg=max-page-size=0x1000",
]

[[bin]]
name = "comet"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
